--- a/src/utils/crisp_pcm/v1/crisp_pcm.ipynb
+++ b/src/utils/crisp_pcm/v1/crisp_pcm.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Weave\n",
+    "include(\"./crisp_pcm.jl\")\n",
     "\n",
-    "include_weave(\"./crisp_pcm.jmd\")"
+    "using .CrispPCM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,14 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "isCrispPCM(A): false\n"
+      "isCrispPCM(B): false\n"
      ]
     }
    ],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": []
