--- a/src/utils/interval_pcm/v1/interval_pcm.ipynb
+++ b/src/utils/interval_pcm/v1/interval_pcm.ipynb
@@ -2,25 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "using IntervalArithmetic.Symbols\n",
-    "using Weave\n",
     "\n",
-    "include_weave(\"./interval_pcm.jmd\")"
+    "include(\"./interval_pcm.jl\")\n",
+    "\n",
+    "using .IntervalPCM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3×3 Matrix{Interval{Float64}}:\n",
+       "3×3 Matrix{IntervalArithmetic.Interval{Float64}}:\n",
        " [1.0, 1.0]_com        [2.0, 2.0]_com  [3.0, 4.0]_com\n",
        " [0.5, 0.5]_com        [1.0, 1.0]_com  [2.0, 2.0]_com\n",
        " [0.25, 0.333334]_com  [0.5, 0.5]_com  [1.0, 1.0]_com"
@@ -50,13 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3×3 Matrix{Interval{Float64}}:\n",
+       "3×3 Matrix{IntervalArithmetic.Interval{Float64}}:\n",
        " [1.0, 1.0]_com        [2.0, 2.0]_com  ∅_ill\n",
        " [0.5, 0.5]_com        [1.0, 1.0]_com     [2.0, 2.0]_com\n",
        " [0.25, 0.333334]_com  [0.5, 0.5]_com     [1.0, 1.0]_com"
@@ -96,13 +97,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3×3 Matrix{Interval{Float64}}:\n",
+       "3×3 Matrix{IntervalArithmetic.Interval{Float64}}:\n",
        "    [1.0, 1.0]_com  [2.0, 2.0]_com  ∅_trv\n",
        "    [0.5, 0.5]_com  [1.0, 1.0]_com     [2.0, 2.0]_com\n",
        " ∅_trv              [0.5, 0.5]_com     [1.0, 1.0]_com"
@@ -134,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": []
