--- a/src/utils/interval_pcm/v1/interval_pcm.ipynb
+++ b/src/utils/interval_pcm/v1/interval_pcm.ipynb
@@ -136,6 +136,34 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3×3 Matrix{IntervalArithmetic.Interval{Float64}}:\n",
+       " [1.0, 1.0]_com      [0.25, 0.666667]_com  [0.166666, 0.400001]_com\n",
+       " [1.49999, 4.0]_com  [1.0, 1.0]_com        [0.5, 0.800001]_com\n",
+       " [2.49999, 6.0]_com  [1.24999, 2.0]_com    [1.0, 1.0]_com"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "W = [\n",
+    "    1..2\n",
+    "    3..4\n",
+    "    5..6\n",
+    "]\n",
+    "\n",
+    "display(PCM(W))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
