PCM 同氏の包含チェック

--- a/src/utils/interval_pcm/v1/interval_pcm.ipynb
+++ b/src/utils/interval_pcm/v1/interval_pcm.ipynb
@@ -33,7 +33,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "isIntervalPCM(A): true\n"
+      "isIntervalPCM(A): true\n",
+      "A′ ∈ A: false\n",
+      "A ∋ A′: false\n"
      ]
     }
    ],
@@ -43,9 +45,16 @@
     "    (1//2)..(1//2) 1..1 2..2\n",
     "    (1//4)..(1//3) (1//2)..(1//2) 1..1\n",
     "]\n",
+    "A′ = [\n",
+    "    1 2 3\n",
+    "    1//2 1 2\n",
+    "    1//3 1//2 1\n",
+    "]\n",
     "\n",
     "display(A)\n",
-    "println(\"isIntervalPCM(A): \", isIntervalPCM(A))"
+    "println(\"isIntervalPCM(A): \", isIntervalPCM(A))\n",
+    "println(\"A′ ∈ A: \", A′ ∈ A)\n",
+    "println(\"A ∋ A′: \", A ∋ A′)"
    ]
   },
   {
