--- a/src/utils/twofold_interval_pcm/v1/twofold_interval_pcm.ipynb
+++ b/src/utils/twofold_interval_pcm/v1/twofold_interval_pcm.ipynb
@@ -21,7 +21,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "isTwofoldIntervalPCM(𝒜): true\n"
+      "isTwofoldIntervalPCM(𝒜): true\n",
+      "𝒜⁻ ∈ 𝒜: true\n",
+      "𝒜⁺ ∈ 𝒜: true\n",
+      "𝒜 ∋ 𝒜⁻: true\n",
+      "𝒜 ∋ 𝒜⁺: true\n"
      ]
     }
    ],
@@ -41,7 +45,11 @@
     "\n",
     "𝒜 = createTwofoldIntervalPCM(𝒜⁻, 𝒜⁺)\n",
     "\n",
-    "println(\"isTwofoldIntervalPCM(𝒜): \", isTwofoldIntervalPCM(𝒜))"
+    "println(\"isTwofoldIntervalPCM(𝒜): \", isTwofoldIntervalPCM(𝒜))\n",
+    "println(\"𝒜⁻ ∈ 𝒜: \", 𝒜⁻ ∈ 𝒜)\n",
+    "println(\"𝒜⁺ ∈ 𝒜: \", 𝒜⁺ ∈ 𝒜)\n",
+    "println(\"𝒜 ∋ 𝒜⁻: \", 𝒜 ∋ 𝒜⁻)\n",
+    "println(\"𝒜 ∋ 𝒜⁺: \", 𝒜 ∋ 𝒜⁺)"
    ]
   },
   {
