--- a/src/utils/twofold_interval/v1/twofold_interval.ipynb
+++ b/src/utils/twofold_interval/v1/twofold_interval.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,11 @@
      "text": [
       "isTwofoldInterval(A): true\n",
       "inner(A): Interval{Float64}(1.0, 2.0, com)\n",
-      "outer(A): Interval{Float64}(1.0, 4.0, com)\n"
+      "inner(A) ∈ A: true\n",
+      "outer(A): Interval{Float64}(1.0, 4.0, com)\n",
+      "outer(A) ∈ A: true\n",
+      "1..1 ∈ A: false\n",
+      "(1..2, 1..3) ⊆ A: true\n"
      ]
     }
    ],
@@ -32,7 +36,11 @@
     "\n",
     "println(\"isTwofoldInterval(A): \", isTwofoldInterval(A))\n",
     "println(\"inner(A): \", inner(A))\n",
-    "println(\"outer(A): \", outer(A))"
+    "println(\"inner(A) ∈ A: \", inner(A) ∈ A)\n",
+    "println(\"outer(A): \", outer(A))\n",
+    "println(\"outer(A) ∈ A: \", outer(A) ∈ A)\n",
+    "println(\"1..1 ∈ A: \", 1..1 ∈ A)\n",
+    "println(\"(1..2, 1..3) ⊆ A: \", (1..2, 1..3) ⊆ A)"
    ]
   },
   {
@@ -45,7 +53,8 @@
      "output_type": "stream",
      "text": [
       "isTwofoldInterval(B): true\n",
-      "isTwofoldInterval(B; allow_uncommon_inner_interval=false): false\n"
+      "isTwofoldInterval(B; allow_uncommon_inner_interval=false): false\n",
+      "∅ ∈ B: true\n"
      ]
     }
    ],
@@ -53,12 +62,13 @@
     "B = (∅, 1..4)\n",
     "\n",
     "println(\"isTwofoldInterval(B): \", isTwofoldInterval(B))\n",
-    "println(\"isTwofoldInterval(B; allow_uncommon_inner_interval=false): \", isTwofoldInterval(B; allow_uncommon_inner_interval=false))"
+    "println(\"isTwofoldInterval(B; allow_uncommon_inner_interval=false): \", isTwofoldInterval(B; allow_uncommon_inner_interval=false))\n",
+    "println(\"∅ ∈ B: \", ∅ ∈ B)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
