interval weights から twofold interval PCM の生成

--- a/src/utils/twofold_interval_pcm/v1/twofold_interval_pcm.ipynb
+++ b/src/utils/twofold_interval_pcm/v1/twofold_interval_pcm.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "using IntervalArithmetic\n",
     "using IntervalArithmetic.Symbols\n",
     "\n",
     "include(\"twofold_interval_pcm.jl\")\n",
@@ -43,7 +44,7 @@
     "    1/8..1/5  1/12..1/9  1/14..1/11  1..1\n",
     "]\n",
     "\n",
-    "𝒜 = createTwofoldIntervalPCM(𝒜⁻, 𝒜⁺)\n",
+    "𝒜 = twofoldIntervalPCM(𝒜⁻, 𝒜⁺)\n",
     "\n",
     "println(\"isTwofoldIntervalPCM(𝒜): \", isTwofoldIntervalPCM(𝒜))\n",
     "println(\"𝒜⁻ ∈ 𝒜: \", 𝒜⁻ ∈ 𝒜)\n",
@@ -55,6 +56,31 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "isTwofoldIntervalPCM(𝓑): true\n"
+     ]
+    }
+   ],
+   "source": [
+    "𝒲 = [\n",
+    "    (interval(1.0, 1.0), interval(1/2, 4.0)),\n",
+    "    (interval(1/2, 1.0), interval(1/3, 1.0)),\n",
+    "    (interval(3/2, 3.0), interval(1/2, 10.0)),\n",
+    "    (interval(5/2, 4), interval(4/2, 12))\n",
+    "]\n",
+    "𝓑 = twofoldIntervalPCM(𝒲)\n",
+    "\n",
+    "println(\"isTwofoldIntervalPCM(𝓑): \", isTwofoldIntervalPCM(𝓑))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
