--- a/src/utils/interval_pcm/v1/interval_pcm.ipynb
+++ b/src/utils/interval_pcm/v1/interval_pcm.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,10 @@
      "output_type": "stream",
      "text": [
       "isIntervalPCM(C): false\n",
-      "isIntervalPCM(C; allow_uncommon=true): true\n"
+      "isIntervalPCM(C; allow_uncommon=true): true\n",
+      "Sim(A, C): 0.6666666666666666\n",
+      "Inc(C, A): 1.0\n",
+      "Inc(A, C): 0.6666666666666666\n"
      ]
     }
    ],
@@ -138,7 +141,10 @@
     "\n",
     "display(C)\n",
     "println(\"isIntervalPCM(C): \", isIntervalPCM(C))\n",
-    "println(\"isIntervalPCM(C; allow_uncommon=true): \", isIntervalPCM(C; allow_uncommon=true))"
+    "println(\"isIntervalPCM(C; allow_uncommon=true): \", isIntervalPCM(C; allow_uncommon=true))\n",
+    "println(\"Sim(A, C): \", Sim(A, C))\n",
+    "println(\"Inc(C, A): \", Inc(C, A))\n",
+    "println(\"Inc(A, C): \", Inc(A, C))"
    ]
   },
   {
