--- a/src/utils/sqlite/v1/interval.ipynb
+++ b/src/utils/sqlite/v1/interval.ipynb
@@ -7,7 +7,15 @@
    "outputs": [],
    "source": [
     "using SQLite\n",
-    "using Tables"
+    "using Tables\n",
+    "using UUIDs\n",
+    "using IntervalArithmetic.Symbols\n",
+    "\n",
+    "include(\"sqlite.jl\")\n",
+    "using .SQLiteHelper\n",
+    "\n",
+    "include(\"interval.jl\")\n",
+    "using .IntervalTable"
    ]
   },
   {
@@ -26,7 +34,7 @@
     }
    ],
    "source": [
-    "db = SQLite.DB(\"test.sqlite\")"
+    "db = database(\"test.sqlite\")"
    ]
   },
   {
@@ -45,8 +53,7 @@
     }
    ],
    "source": [
-    "schema = Tables.Schema([:a, :b, :c], [Int, Float64, String])\n",
-    "SQLite.createtable!(db, \"test\", schema)"
+    "createMatrixTable(db, \"interval_data\")"
    ]
   },
   {
@@ -57,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "#28 (generic function with 1 method)"
+       "\"7a35389a-b5e6-42a1-99c5-65acc1b099bc\""
       ]
      },
      "metadata": {},
@@ -65,7 +72,7 @@
     }
    ],
    "source": [
-    "SQLite.load!(db, \"test\")"
+    "id = string(uuid4())"
    ]
   },
   {
@@ -76,7 +83,7 @@
     {
      "data": {
       "text/plain": [
-       "101"
+       "SQLite.Query{false}(SQLite.Stmt(SQLite.DB(\"test.sqlite\"), Base.RefValue{Ptr{SQLite.C.sqlite3_stmt}}(Ptr{SQLite.C.sqlite3_stmt} @0x000000000298bc48), Dict{Int64, Any}(5 => \"[[1.0,2.0],[7.0,8.0],[3.0,4.0],[9.0,10.0],[5.0,6.0],[11.0,12.0]]\", 4 => 3, 2 => \"interval_matrix\", 3 => 2, 1 => \"7a35389a-b5e6-42a1-99c5-65acc1b099bc\")), Base.RefValue{Int32}(101), Symbol[], Type[], Dict{Symbol, Int64}(), Base.RefValue{Int64}(0))"
       ]
      },
      "metadata": {},
@@ -84,12 +91,45 @@
     }
    ],
    "source": [
-    "SQLite.drop!(db, \"test\")"
+    "insertIntervalData(db, \"interval_data\", id, [\n",
+    "    1..2 3..4 5..6\n",
+    "    7..8 9..10 11..12\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2×3 Matrix{IntervalArithmetic.Interval{Float64}}:\n",
+       " [1.0, 2.0]_com  [3.0, 4.0]_com    [5.0, 6.0]_com\n",
+       " [7.0, 8.0]_com  [9.0, 10.0]_com  [11.0, 12.0]_com"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "getIntervalData(db, \"interval_data\", id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SQLite.close(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": []
