手法 1 の実行

--- a/src/experiments/20240522/methods/method1/method1.ipynb
+++ b/src/experiments/20240522/methods/method1/method1.ipynb
@@ -51,9 +51,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for n = 4:7\n",
+    "for n = 5:5\n",
     "    db = database(\"../../experiment_20240522_n$(n)_M$(M).sqlite\")\n",
-    "    dropTable(db, resultTableName)\n",
+    "    # dropTable(db, resultTableName)\n",
     "    createMatrixTable(db, resultTableName)\n",
     "end"
    ]
@@ -161,7 +161,7 @@
     }
    ],
    "source": [
-    "for n = 4:7\n",
+    "for n = 5:5\n",
     "    sampleData = loadSamples(n)\n",
     "    processSamples(sampleData, n)\n",
     "end"
